--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">TaskManager</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="task_name_text">Task name:</string>
+    <string name="task_date_start_text">Date start:</string>
+    <string name="task_date_finish_text">Date finish:</string>
+    <string name="task_description_text">Description:</string>
 </resources>
